--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,14 @@ jobs:
             - v1-dependencies-{{ checksum "app/requirements.txt" }}
             - v1-dependencies-
       - run:
-          name: Install Dependencies
+          name: install dependencies
           command: |
             python3 -m venv .devops
             source .devops/bin/activate
-          # Install hadolint
+            make install
+            # Install hadolint
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-chmod +x /bin/hadolint
+                chmod +x /bin/hadolint
       - save_cache:
           paths:
             - ./.devops
