--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "app/requirements.txt" }}
+            - v1-dependencies-{{ checksum "requirements.txt" }}
             - v1-dependencies-
       - run:
           name: install dependencies
@@ -26,7 +26,7 @@ jobs:
       - save_cache:
           paths:
             - ./.devops
-          key: v1-dependencies-{{ checksum "app/requirements.txt" }}
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: Run lint
           command: |
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Build and push docker image
           command: |
-            export IMAGE_VER=$(<app/version.txt)
+            export IMAGE_VER=$(<version.txt)
             
             # Build docker image
             docker build -t capstone-app app
@@ -68,7 +68,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "app/requirements.txt" }}
+            - v1-dependencies-{{ checksum "requirements.txt" }}
             - v1-dependencies-
       - run:
           name: Install dependencies
