--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             export IMAGE_VER=$(<version.txt)
             
             # Build docker image
-            docker build -t capstone-app
+            docker build -t capstone-app .
             
             # Tag docker image
             docker tag capstone-app ${DOCKER_HUB_ID}/${DOCKER_REPO}:${IMAGE_VER}
