--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 
 orbs:
   docker: circleci/docker@2.1.2
-
+  aws-eks: circleci/aws-eks@2.2.0
+  kubernetes: circleci/kubernetes@1.3
 
 jobs:
   install-and-check-lint:
@@ -60,8 +61,8 @@ jobs:
             # We publish two images with different version tags: 
             # - numbered version
             # - "latest"
-            docker push ${DOCKER_HUB_ID}/${DOCKER_REPO}:${IMAGE_VER}
-            docker push ${DOCKER_HUB_ID}/${DOCKER_REPO}:lastest
+            docker push niceday2256/capstone-app:${IMAGE_VER}
+            docker push niceday2256/capstone-app:lastest
 
   deploy-infrastructure:
     docker:
@@ -84,7 +85,7 @@ jobs:
       - run:
           name: deploy cluster
           command: |
-            eksctl create cluster --name capstone-cluster --region us-east-1 --nodegroup-name capstone-group --nodes 2 --ssh-access --ssh-public-key udacity --managed       
+            eksctl create cluster --name capstone-proj --region us-east-1 --nodegroup-name capstone-proj --nodes 2 --ssh-access --ssh-public-key udacity --managed       
 
   deploy-config: 
     docker:
@@ -93,7 +94,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
+            - v1-dependencies-{{ checksum "app/requirements.txt" }}
             - v1-dependencies-
       - setup_remote_docker:
           version: 20.10.14
@@ -113,7 +114,22 @@ jobs:
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
             aws configure set aws_session_token $AWS_SESSION_TOKEN
             aws configure set region $AWS_DEFAULT_REGION
-      # - kubernetes/install-kubectl
+      - kubernetes/install-kubectl
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: capstone-proj
+          install-kubectl: true
+      - kubernetes/create-or-update-resource:
+          get-rollout-status: true
+          resource-file-path: "kubernates/capstone-frontend-deployment.yml"
+          resource-name: deployment/capstone-frontend
+      - kubernetes/create-or-update-resource:
+          get-rollout-status: true
+          resource-file-path: "kubernates/capstone-frontend-service.yml"
+          resource-name: deployment/capstone-frontend
+      - kubernetes/update-container-image:
+          get-rollout-status: true
+          container-image-updates: "capstone-frontend=niceday2256/capstone-proj:latest"
+          resource-name: deployment/capstone-frontend
 workflows:
   default:
     jobs:
