--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,19 @@ orbs:
   aws-eks: circleci/aws-eks@2.2.0
   kubernetes: circleci/kubernetes@1.3
 
+commands:
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      workflow_id:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name eksctl-capstone-proj-<<parameters.workflow_id>>-cluster
 jobs:
   install-and-check-lint:
     docker:
@@ -58,9 +71,7 @@ jobs:
             # Login into docker-hub
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASS
             
-            # We publish two images with different version tags: 
-            # - numbered version
-            # - "latest"
+            # We push two images with different version tags: given verision and latest
             docker push niceday2256/capstone-app:${IMAGE_VER}
             docker push niceday2256/capstone-app:lastest
 
@@ -85,8 +96,9 @@ jobs:
       - run:
           name: deploy cluster
           command: |
-            eksctl create cluster --name capstone-proj --region us-east-1 --nodegroup-name capstone-proj --nodes 1 --ssh-access --ssh-public-key udacity --managed       
-
+            eksctl create cluster --name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --region us-east-1 --nodegroup-name capstone-proj:${CIRCLE_WORKFLOW_ID:0:7} --nodes 1 --ssh-access --ssh-public-key udacity --managed       
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
   deploy-config: 
     docker:
       - image: 'cimg/base:stable'
@@ -120,12 +132,40 @@ jobs:
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
           resource-file-path: "kubernetes/capstone-frontend-deployment.yml"
+          resource-name: deployment/capstone-proj
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
           resource-file-path: "kubernetes/capstone-frontend-service.yml"
+          resource-name: deployment/capstone-proj
       - kubernetes/update-container-image:
           get-rollout-status: true
           container-image-updates: "capstone-frontend=niceday2256/capstone-proj:latest"
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  cleanup:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: Get old stack workflow id && Remove old stacks and files
+            command: |
+              # your code here
+              export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+              echo OldWorkflowID: "${OldWorkflowID}"
+              echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+              # Fetch the stack names          
+              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}"
+              if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
+              then
+                aws cloudformation delete-stack --stack-name "eksctl-capstone-proj-${OldWorkflowID}-cluster"
+              else
+                echo "Do nothing"
+              fi 
 workflows:
   default:
     jobs:
