--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,7 @@ jobs:
       - run:
           name: deploy cluster
           command: |
-            eksctl create cluster --name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --region us-east-1 --nodegroup-name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --nodes 2 --node-type t2.micro --ssh-access --ssh-public-key udacity --managed       
+            eksctl create cluster --name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --region us-east-1 --nodegroup-name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --nodes 1  --ssh-access --ssh-public-key udacity --managed       
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
   deploy-config: 
