--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,8 +99,7 @@ jobs:
       - run:
           name: deploy cluster
           command: |
-            eksctl create cluster --name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --region us-east-2 --nodegroup-name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --nodes 2  --ssh-access --ssh-public-key udacity --managed       
-      - destroy-environment:
+            eksctl create cluster --name capstone-proj-${CIRCLE_WORKFLOW_ID:0:7} --region us-east-2 
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}  
   deploy-config: 
     docker:
@@ -122,13 +121,6 @@ jobs:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
-      - run:
-          name: set-credential
-          command: |
-            aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-            aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-            aws configure set region $AWS_DEFAULT_REGION
-            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
       - kubernetes/install-kubectl
       - aws-eks/update-kubeconfig-with-authenticator:
           cluster-name: capstone-proj-${CIRCLE_WORKFLOW_ID:0:7}
