--- a/kubernetes/capstone-frontend-service.yml
+++ b/kubernetes/capstone-frontend-service.yml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-loadbalance
+  name: capstone-proj
 spec:
   selector:
     app: capstone-proj
   type: LoadBalancer
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
