--- a/kubernetes/capstone-frontend-service.yml
+++ b/kubernetes/capstone-frontend-service.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: capstone-proj
+  name: service-loadbalance
 spec:
   selector:
     app: capstone-proj
   type: LoadBalancer
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
